--- a/jobplus/templates/base.html
+++ b/jobplus/templates/base.html
@@ -26,7 +26,6 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li class="active"><a href="#">Link  链接1， 到哪里去的链接？ <span class="sr-only">(current)</span></a></li>
-        <li><a href="#">Link</a></li>
 		<li><a href="#"> 职位</a></li>
 		<li><a href="#"> 公司</a></li>
 		<li><a href="#"> 控制台</a></li>
@@ -55,7 +54,8 @@
         <button type="submit" class="btn btn-default">Submit</button>
       </form>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Link 这个是在哪里出现的？</a></li>
+        <li><a href="{{ url_for('front.login') }}">Link User reigset</a></li>
+          <li><a href="#">company reisgsert</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Current User list <span class="caret"></span></a>
           <ul class="dropdown-menu">
