--- a/jobplus/templates/login.html
+++ b/jobplus/templates/login.html
@@ -1,4 +1,20 @@
 {% extends "base.html" %}
+{% from "macros.html" import render_form %}
+
+
+
+{% block title %}
+Login
+{% endblock %}
+
+
+{% block body %}
+<div class="form">
+    <h2> Login </h2>
+</div>
+
+{% endblock %}
+
 
 
 
