--- a/jobplus/templates/marco.html
+++ b/jobplus/templates/marco.html
@@ -1,6 +1,7 @@
 {% macro render_form(form, url, upload_file=False) %}
 {% if not upload_file %}
 <form method="POST" action="{{ url }}">
+{% else %}
 <form method="POST" enctype="multipart/form-data" action="{{ url }}">
 
 {% endif %}
@@ -31,5 +32,5 @@
       {% endif %}
      {% endfor %}
  </form>
- {% endmarco %}
+{% endmarco %}
 
