#18 complete  front.html

--- a/jobplus/templates/company_register.html
+++ b/jobplus/templates/company_register.html
@@ -1,19 +1,16 @@
 {% extends "base.html" %}
 
-
-
 {% block title %}
-Login
-{% endblock %}
 
+company Register
+
+{% endblock %}
 
 {% block body %}
 <div class="form">
-    <h2> Login </h2>
+    <h2> company register</h2>
 </div>
 
 {% endblock %}
-
-
 
 
