--- a/jobplus/templates/base.html
+++ b/jobplus/templates/base.html
@@ -31,22 +31,8 @@
 		<li><a href="#"> 控制台</a></li>
 		<li><a href="#"> 管理</a></li>
 		
-		</ul>
 		
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">One more separated link</a></li>
-          </ul>
-        </li>
-      </ul>
-	  
+    
       <form class="navbar-form navbar-left">
         <div class="form-group">
           <input type="text" class="form-control" placeholder="Search">
@@ -54,14 +40,15 @@
         <button type="submit" class="btn btn-default">Submit</button>
       </form>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="{{ url_for('front.login') }}">Link User reigset</a></li>
-          <li><a href="#">company reisgsert</a></li>
+        <li><a href="{{ url_for('front.user_register') }}">Link User reigset</a></li>
+          <li><a href="{{ url_for('front.company_register') }}">company reisgsert</a></li>
+          <li><a href='{{url_for('front.login') }}'> Loign </a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Current User list <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
+            <li><a href="#">Personal profile</a></li>
             <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
+            <li><a href="#">Log out</a></li>
             <li role="separator" class="divider"></li>
             <li><a href="#">Separated link</a></li>
           </ul>
