--- a/jobplus/templates/user_register.html
+++ b/jobplus/templates/user_register.html
@@ -1,19 +1,15 @@
 {% extends "base.html" %}
 
-
-
 {% block title %}
-Login
+Register
 {% endblock %}
-
 
 {% block body %}
 <div class="form">
-    <h2> Login </h2>
+    <h2> regiser </h2>
+
 </div>
-
 {% endblock %}
-
 
 
 
