--- a/jobplus/templates/base.html
+++ b/jobplus/templates/base.html
@@ -19,13 +19,13 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">实验楼jobplus</a>
+      <a class="navbar-brand" href="{{url_for('front.index') }}">实验楼jobplus</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Link  链接1， 到哪里去的链接？ <span class="sr-only">(current)</span></a></li>
+        <li class="active"><a href="{{url_for('front.index')}}">Link  链接1， 到哪里去的链接？ <span class="sr-only">(current)</span></a></li>
 		<li><a href="#"> 职位</a></li>
 		<li><a href="#"> 公司</a></li>
 		<li><a href="#"> 控制台</a></li>
