--- a/jobplus/templates/base.html
+++ b/jobplus/templates/base.html
@@ -25,9 +25,9 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="{{url_for('front.index')}}">Link  链接1， 到哪里去的链接？ <span class="sr-only">(current)</span></a></li>
-		<li><a href="#"> 职位</a></li>
-		<li><a href="#"> 公司</a></li>
+        <li class="active"><a href="{{url_for('front.index')}}">Link  链接1，？ <span class="sr-only">(current)</span></a></li>
+		<li><a href="{{ url_for('job.job_list') }}"> 职位</a></li>
+		<li><a href="{{ url_for('company.index') }}"> 公司</a></li>
 		<li><a href="#"> 控制台</a></li>
 		<li><a href="#"> 管理</a></li>
 		
