--- a/jobplus/templates/base.html
+++ b/jobplus/templates/base.html
@@ -28,32 +28,47 @@
         <li class="active"><a href="{{url_for('front.index')}}">Link  链接1，？ <span class="sr-only">(current)</span></a></li>
 		<li><a href="{{ url_for('job.job_list') }}"> 职位</a></li>
 		<li><a href="{{ url_for('company.index') }}"> 公司</a></li>
+		{% if current_user.is_authenticated and current_user.is_admin %}
 		<li><a href="#"> 控制台</a></li>
+		{% endif %}
+		
+		{% if current_user.is_authenticated and current_user.is_company %}
 		<li><a href="#"> 管理</a></li>
+		{% endif }
 		
-		
-    
+	</ul>
+	
+	    
       <form class="navbar-form navbar-left">
         <div class="form-group">
           <input type="text" class="form-control" placeholder="Search">
         </div>
         <button type="submit" class="btn btn-default">Submit</button>
       </form>
+	  
+	  
+	  
       <ul class="nav navbar-nav navbar-right">
+	    {% if not current_user.is_authenticated %}
         <li><a href="{{ url_for('front.user_register') }}">Link User reigset</a></li>
           <li><a href="{{ url_for('front.company_register') }}">company reisgsert</a></li>
-          <li><a href='{{url_for('front.login') }}'> Loign </a></li>
+          <li><a href='{{url_for('front.login') }}> Loign </a></li>
+		
+		{% else %}
+		
+	
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Current User list <span class="caret"></span></a>
           <ul class="dropdown-menu">
+		  
             <li><a href="#">Personal profile</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Log out</a></li>
+          
             <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-          </ul>
-        </li>
+            <li><a href="url_for('front.logout')">Logout</a></li></ul>
+		</li>		
+		{% endif %}
       </ul>
+	  
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
   
