--- a/jobplus/templates/base.html
+++ b/jobplus/templates/base.html
@@ -34,7 +34,7 @@
 		
 		{% if current_user.is_authenticated and current_user.is_company %}
 		<li><a href="#"> 管理</a></li>
-		{% endif }
+		{% endif %}
 		
 	</ul>
 	
@@ -49,24 +49,22 @@
 	  
 	  
       <ul class="nav navbar-nav navbar-right">
-	    {% if not current_user.is_authenticated %}
+    {% if not current_user.is_authenticated %}
         <li><a href="{{ url_for('front.user_register') }}">Link User reigset</a></li>
-          <li><a href="{{ url_for('front.company_register') }}">company reisgsert</a></li>
-          <li><a href='{{url_for('front.login') }}> Loign </a></li>
+        <li><a href="{{ url_for('front.company_register') }}">company reisgsert</a></li>
+        <li><a href="{{ url_for('front.login')    }}"> Login </a></li>
 		
-		{% else %}
-		
-	
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Current User list <span class="caret"></span></a>
-          <ul class="dropdown-menu">
+    {% else %}
+          <li class="dropdown">
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Current User list <span class="caret"></span></a>
+        <ul class="dropdown-menu">
 		  
             <li><a href="#">Personal profile</a></li>
           
             <li role="separator" class="divider"></li>
-            <li><a href="url_for('front.logout')">Logout</a></li></ul>
+            <li><a href="{{ url_for('front.logout') }} ">Logout</a></li></ul>
 		</li>		
-		{% endif %}
+    {% endif %}
       </ul>
 	  
     </div><!-- /.navbar-collapse -->
