something need to be done

--- a/jobplus/templates/admin/index.html
+++ b/jobplus/templates/admin/index.html
@@ -9,7 +9,7 @@ Admin
     <div class="col-md-3">
         <h4> manage</h4>
         <div class="list-group">
-            <a href="{{ url_for('admin.users'))}" class="list-group-item">user manage</a>
+            <a href="{{ url_for('admin.users')}}" class="list-group-item">user manage</a>
             <a href="{{ url_for('admin.jobs') }}" class="list-group-item">job manage</a>
         </div>
 
