--- a/jobplus/templates/user_register.html
+++ b/jobplus/templates/user_register.html
@@ -1,20 +1,16 @@
 {% extends "base.html" %}
 {% from "macros1.html" import render_form %}
 
-
 {% block title %}
-Login
+Register
 {% endblock %}
-
 
 {% block body %}
 <div class="form">
-    <h2> Login </h2>
-    {{ render_form(form, url_for('front.login')) }}
+    <h2> regiser </h2>
+    {{ render_form(form, url_for('front.user_register')) }}
 </div>
-
 {% endblock %}
-
 
 
 
